Fixed visiblity of the parent titles in the filterbar

--- a/less/bolt-filterbar.less
+++ b/less/bolt-filterbar.less
@@ -5,14 +5,14 @@
     z-index: 3;
 
     &__item {
-        height: rem(30px);
+        min-height: rem(30px);
         line-height: rem(30px);
         padding: 0 rem(10px);
         font-size: rem(14px);
 
         &--checkbox {
             input {
-                margin: rem(2px) rem(8px) 0 0;
+                margin: rem(8px) rem(8px) 0 0;
             }
         }
 
